third_party/move/move-compiler-v2/tests/checking/typing/declare_duplicate_binding.exp

Diagnostics:
error: duplicate declaration of `x`
  ┌─ tests/checking/typing/declare_duplicate_binding.move:5:17
  │
5 │         let (x, x);
  │                 ^

error: previous declaration of `x`
  ┌─ tests/checking/typing/declare_duplicate_binding.move:5:14
  │
5 │         let (x, x);
  │              ^

error: duplicate declaration of `f`
  ┌─ tests/checking/typing/declare_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f);
  │                   ^

error: previous declaration of `f`
  ┌─ tests/checking/typing/declare_duplicate_binding.move:6:14
  │
6 │         let (f, R{f}, f);
  │              ^

error: duplicate declaration of `f`
  ┌─ tests/checking/typing/declare_duplicate_binding.move:6:23
  │
6 │         let (f, R{f}, f);
  │                       ^

error: previous declaration of `f`
  ┌─ tests/checking/typing/declare_duplicate_binding.move:6:19
  │
6 │         let (f, R{f}, f);
  │                   ^
